@@ -26,9 +26,32 @@ using std::cout;
 /* Basic test of identifier() for ColourConversion (i.e. a hash of the numbers) */
 BOOST_AUTO_TEST_CASE (colour_conversion_test)
 {
-	ColourConversion A (2.4, true, YUV_TO_RGB_REC601, libdcp::colour_matrix::srgb_to_xyz, 2.6);
-	ColourConversion B (2.4, false, YUV_TO_RGB_REC601, libdcp::colour_matrix::srgb_to_xyz, 2.6);
+	ColourConversion A (
+		2.4, true, YUV_TO_RGB_REC601,
+		Chromaticity (0.64, 0.33), Chromaticity (0.3, 0.6), Chromaticity (0.15, 0.06), Chromaticity (0.3127, 0.329), 2.6
+		);
 
-	BOOST_CHECK_EQUAL (A.identifier(), "1e720d2d99add654d7816f3b72da815e");
-	BOOST_CHECK_EQUAL (B.identifier(), "18751a247b22682b725bf9c4caf71522");
+	ColourConversion B (
+		2.4, false, YUV_TO_RGB_REC601,
+		Chromaticity (0.64, 0.33), Chromaticity (0.3, 0.6), Chromaticity (0.15, 0.06), Chromaticity (0.3127, 0.329), 2.6
+		);
+
+	BOOST_CHECK_EQUAL (A.identifier(), "ba02e01a7614382832db990b31ee6821");
+	BOOST_CHECK_EQUAL (B.identifier(), "156fa7e280d565676a0bc971be0d94bc");
+}
+
+/* Check the calculation of conversion matrices */
+BOOST_AUTO_TEST_CASE (colour_conversion_matrix_test)
+{
+	ColourConversion c;
+	boost::numeric::ublas::matrix<double> m = c.rgb_to_xyz ();
+	BOOST_CHECK_CLOSE (m(0, 0), 0.4123908, 0.01);
+	BOOST_CHECK_CLOSE (m(0, 1), 0.3575843, 0.01);
+	BOOST_CHECK_CLOSE (m(0, 2), 0.1804808, 0.01);
+	BOOST_CHECK_CLOSE (m(1, 0), 0.2126390, 0.01);
+	BOOST_CHECK_CLOSE (m(1, 1), 0.7151687, 0.01);
+	BOOST_CHECK_CLOSE (m(1, 2), 0.0721923, 0.01);
+	BOOST_CHECK_CLOSE (m(2, 0), 0.0193308, 0.01);
+	BOOST_CHECK_CLOSE (m(2, 1), 0.1191948, 0.01);
+	BOOST_CHECK_CLOSE (m(2, 2), 0.9505322, 0.01);
 }
